<resources>
    <string name="app_name">Notes</string>
    <string name="add_note_label">Add</string>
    <string name="details_name_hint">Name</string>
    <string name="details_desc_hint">Description</string>
    <string name="details_button_delete_label">Delete</string>
    <string name="details_button_save_label">Save</string>
    <string name="details_date_picker_desc">Edit Date</string>
    <string name="context_action_delete">Delete</string>
    <string name="context_action_edit">Edit</string>
    <string name="sign_in_dialog_title">Please sign in</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Are you sure?</string>
</resources>